# ADDMC

./: .gitignore  CMakeLists.txt  GNUmakefile  INSTALL.md  INSTALL.sh  LICENSE  Makefile  OPTIL.sh  README.md  makefile
MCC/: MCC.py  typescript
MCC/wcnf/: track2_000.mcc2020_wcnf  track2_004.mcc2020_wcnf  track2_006.mcc2020_wcnf  track2_008.mcc2020_wcnf  track2_010.mcc2020_wcnf  track2_012.mcc2020_wcnf  track2_014.mcc2020_wcnf  track2_016.mcc2020_wcnf  track2_018.mcc2020_wcnf  track2_020.mcc2020_wcnf  track2_022.mcc2020_wcnf  track2_024.mcc2020_wcnf  track2_026.mcc2020_wcnf  track2_028.mcc2020_wcnf  track2_030.mcc2020_wcnf  track2_032.mcc2020_wcnf  track2_034.mcc2020_wcnf  track2_036.mcc2020_wcnf  track2_038.mcc2020_wcnf  track2_040.mcc2020_wcnf  track2_042.mcc2020_wcnf  track2_044.mcc2020_wcnf  track2_046.mcc2020_wcnf  track2_048.mcc2020_wcnf  track2_050.mcc2020_wcnf  track2_052.mcc2020_wcnf  track2_054.mcc2020_wcnf  track2_056.mcc2020_wcnf  track2_058.mcc2020_wcnf  track2_060.mcc2020_wcnf  track2_062.mcc2020_wcnf  track2_064.mcc2020_wcnf  track2_066.mcc2020_wcnf  track2_068.mcc2020_wcnf  track2_070.mcc2020_wcnf  track2_072.mcc2020_wcnf  track2_074.mcc2020_wcnf  track2_076.mcc2020_wcnf  track2_078.mcc2020_wcnf  track2_080.mcc2020_wcnf  (+59 more)
MCC/wmc/: track2_000.mcc2020_wcnf  track2_002.mcc2020_wcnf  track2_004.mcc2020_wcnf  track2_006.mcc2020_wcnf  track2_008.mcc2020_wcnf  track2_010.mcc2020_wcnf  track2_012.mcc2020_wcnf  track2_014.mcc2020_wcnf  track2_016.mcc2020_wcnf  track2_018.mcc2020_wcnf  track2_020.mcc2020_wcnf  track2_022.mcc2020_wcnf  track2_024.mcc2020_wcnf  track2_026.mcc2020_wcnf  (+86 more)
counting/: Makefile
examples/: CACHET.cnf  MINIC2D.cnf  UNWEIGHTED.cnf
(+26 files in other folders)
